--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ dj-database-url==0.5.0
 Django~=2.0.13
 django-heroku==0.3.1
 gunicorn==20.1.0
-psycopg2==2.9.3
+psycopg2~=2.8.6
 pytz~=2018.5
 whitenoise==6.0.0
